cloudformation_templates/myapp.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A sample template
Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  ImageId:
    Type: String
    Default: ami-0d3f8633a5f5b915c
    Description: Image ID
  MyVPC:
    Type: String
    Default: vpc-53062129
Resources:
  WebServer01:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceTypeParameter
      KeyName: advcfn
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      BlockDeviceMappings:
        -
          DeviceName: /dev/sdm
          Ebs:
            VolumeType: io1
            Iops: 200
            DeleteOnTermination: true
            VolumeSize: 20
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: foo
          Value: bar
Outputs:
  InstanceID:
    Description: The Instance ID
    Value: !Ref WebServer01
  WebServer01PublicDNSName:
    Description: DNS Name
    Value: !GetAtt WebServer01.PublicDnsName
